# savebasket-scraper

./: .env.example  .gitignore  README.md  ah_page_source.html  clean_aldi.py  inspect_ah.py  pyproject.toml  requirements.txt  test_ah_debug.py
.github/: copilot-instructions.md
docs/: import-contracts.md  mvp-blueprint.md  repo-structure-and-tech-stack.md  repo1-sprint-plan.md  store-notes.md
output/: aldi_cleaned.json  jumbo_dairy_2026-04-12_13-41.json  sel.xml  vomar_dairy_latest.json
output/jumbo/18-04-2026/: conserven_soepen_sauzen_oliën.json  vega_en_plantaardig.json  vleeswaren_kaas_en_tapas.json  wereldkeukens_kruiden_pasta_en_rijst.json  zuivel_boter_en_eieren.json
output/raw/: aldi_latest.json
scripts/: run_daily_imports.sh  setup_local.sh
src/: ah-scraper.py  ah-scrapper.py  aldi-scrapper.py  jumbo-scraper.py  test_ah_page.py  vomar-scrapper.py
src/savebasket_data/: __init__.py  __main__.py  cli.py
src/savebasket_data/clients/: __init__.py  app_import_client.py
src/savebasket_data/config/: __init__.py  settings.py
src/savebasket_data/contracts/: __init__.py  ah_import.py  offer_import.py  store_price_import.py
src/savebasket_data/jobs/: __init__.py  run_ah_import.py  run_aldi_import.py  run_all_imports.py  run_jumbo_import.py  run_offer_import.py  run_vomar_import.py  store_import_runner.py
src/savebasket_data/manifests/: __init__.py  manifest_writer.py
src/savebasket_data/normalization/: __init__.py  category_mapper.py  name_cleaner.py  price_parser.py  product_normalizer.py  quantity_parser.py
tests/unit/: test_cli.py
(+36 files in other folders)
