[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "savebasket-data"
version = "0.1.0"
description = "SaveBasket data ingestion and normalization pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "httpx>=0.27,<1",
    "lxml>=5,<6",
    "orjson>=3.10,<4",
    "playwright>=1.46,<2",
    "pydantic>=2.8,<3",
    "tenacity>=9,<10",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<1",
]

[project.scripts]
savebasket-data = "savebasket_data.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["src/savebasket_data/scrapers/old"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
